# apis-instance-nsvis

./: .gitignore  README.md  manage.py  pyproject.toml
.github/: auto-deploy-values.yaml  dependabot.yml
.github/workflows/: deploy.yml
apis_instance_nsvis/: admin.py  annotation_tables.py  apps.py  autocomplete.py  filtersets.py  forms.py  importers.py  models.py  querysets.py  settings.py  signals.py  tables.py  urls.py  utils.py  views.py
apis_instance_nsvis/management/commands/: import.py  importannotations.py
apis_instance_nsvis/migrations/: 0001_initial.py  0002_alter_mongodbmodel_content_type_and_more.py  0002_collaboration_livesin_membership_worksin_and_more.py  0002_islearningat.py  0003_annotation.py  0003_rename_collaboration_collaborateswith.py  0004_annotation_author_annotation_caption_and_more.py  0004_rename_membership_ismemberof.py  0005_alter_annotation_author_alter_annotation_depicted_and_more.py  0006_annotation_internal_comment.py  0007_remove_person_date_of_birth_and_more.py  0008_person_date_of_birth_person_date_of_birth_date_from_and_more.py  0009_islearningat_from_date_and_more.py  0010_remove_person_biography_and_more.py  0011_hasstudioin.py  0012_bornin_diedin.py  0013_person_citizenship_versionperson_citizenship.py  0014_educationtype_islearningat_details_and_more.py  0015_professiontype_worksas_versionprofessiontype.py  0016_person_membership_comment_and_more.py  0017_specialarea_person_special_areas_and_more.py  0018_person_comment_person_exile_comment_and_more.py  0019_person_inheritance_versionperson_inheritance.py  0020_person_other_sources_person_research_sources_and_more.py  0021_isinventoriedin_contact_isinventoriedin_extent.py  0022_delete_worksin.py  0023_alter_person_citizenship_alter_person_comment_and_more.py  0024_person_profession_comment_and_more.py  0025_alter_addressdata_options_and_more.py  0026_person_literature_versionperson_literature.py  0027_person_propaganda_membership_person_work_ban_and_more.py  0028_exilein.py  0029_alter_person_options.py  0030_rename_comment_person_address_comment_and_more.py  0031_alter_person_address_comment_and_more.py  0032_collaborateswith_from_date_and_more.py  0033_alter_person_gender_alter_versionperson_gender.py  0034_remove_versionaddressdata_self_contenttype_and_more.py  0035_imprisonedin.py  0036_isinheritancein.py  (+30 more)
apis_instance_nsvis/static/css/: nsvis.css
apis_instance_nsvis/templates/: base.html  e53_place_from_nominatim_autocomplete_result.html  wrong_annotation_number.html
apis_instance_nsvis/templatetags/: nsvis.py
(+28 files in other folders)
