[project]
name = "apis-instance-nsvis"
version = "0.1.0"
description = "APIS Instance for the Project Visuelle Öffentlichkeit im Nationalsozialismus"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at"}, { name = "Matthias Schlögl", email = "matthias.schloegl@oeaw.ac.at" } ]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apis-core-rdf==0.47.1",
    "apis-acdhch-default-settings==2.9.0",
    "psycopg2>=2.9,<3.0",
    "django-auditlog>=3.0.0,<4.0",
    "httpx==0.28.1",
    "apis-acdhch-django-invite==0.2.0",
    "django-interval==0.5.1",
    "django-json-editor-field==0.4.2",
    "pillow>=11.1.0,<12.0",
    "apis-acdhch-django-auditlog==0.2.1",
    "boto3>=1.37.16,<2.0",
    "imgproxy>=1.0.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
